--- a/herams/styles/home/map.less
+++ b/herams/styles/home/map.less
@@ -32,7 +32,7 @@
 
     &:nth-child(1) {
      padding: 6px 10px 10px 10px;
-     height:75px;
+     // height:75px;
       &>div {
         display: flex;
         align-items:center;
