- back to HeRAMS fix + remove from title - Map zoom according to HFs locations - Stacked bar reduced bars height - Tables edits - Header edits after breadcrumbs removing

--- a/herams/styles/overview/dataviz-table-style.less
+++ b/herams/styles/overview/dataviz-table-style.less
@@ -44,11 +44,16 @@
   }
 
   tr {
-    height: 25px;
+    // height: 25px;
+    height: 30px;
     border-bottom: solid 1px @light-grey;
 
-    &:last-of-type {
+    &.no-border-bottom {
       border-bottom: none;
+    }
+
+    td {
+      padding-top: 6px;
     }
   }
   th {
