--- a/herams/styles/overview/overview.less
+++ b/herams/styles/overview/overview.less
@@ -4,7 +4,8 @@
 
 @title-borderbot: 4px;
 
-@dark-top-height: 176px;
+// @dark-top-height: 176px; /* !! height to be with Breadcrumbs !! */
+@dark-top-height: 162px;
 
 
 .mainWrapper .overview {
@@ -271,7 +272,7 @@
     width:100%;
     left:0;
     text-align:center;
-    font-size: 1.2em;
+    font-size: 1.6em;
     font-weight: @bold;
   }
 }
