--- a/herams/styles/base.less
+++ b/herams/styles/base.less
@@ -2,13 +2,15 @@
     OVERALL WRAPPER
  */
 .mainWrapper .main .background-top {
-  height: 173px;
+  // height: 173px;
+  height: 159px;
   background-color: #42424b;
 }
 .mainWrapper .main .content {
   // position: fixed;
   position: absolute;
-  top: 34px;
+  // top: 34px; /* !! top to be with Breadcrumbs !! */
+  top: 20px;
   width: 100%;
   height: 90%;
   padding-left: 20px;
@@ -49,12 +51,14 @@
   font-size: 3em;
   font-weight: @light;
   letter-spacing: -2px;
-  line-height: 34px;
+  // line-height: 34px;
+  margin-top: 17px;
   color: white;
 }
 .content .header .title span {
   margin: 0;
-  padding-bottom: 10px;
+  // padding-bottom: 10px;
+  padding-bottom: 3px;
   border-bottom: 4px solid #5791e1;
 }
 
