Charts edits (totals in titles + misc) Map legend edits for workspace layouts misc edits

--- a/herams/js/overview/directives/layouts/layout_1_3.html
+++ b/herams/js/overview/directives/layouts/layout_1_3.html
@@ -1,6 +1,6 @@
 <div class="layout13">
     <div class="boxes">
-       <div class="box half layout-map"><hfmap mapdata="::mapdata" ng-cloak></hfmap></div>
+       <div class="box half layout-map"><hfmap ng-cloak></hfmap></div>
        <div class="box half">
            <div class="split-3">
                <div class="table-row">
