--- a/herams/styles/home/map.less
+++ b/herams/styles/home/map.less
@@ -1,3 +1,13 @@
+
+.leaflet-touch .leaflet-bar a {
+  width: 25px;
+  height: 25px;
+  line-height: 25px;
+}
+.leaflet-touch .leaflet-control-zoom-in, .leaflet-touch .leaflet-control-zoom-out {
+  font-size: 20px;
+}
+
 .map-entry {
 
   margin: 0; padding:0;
@@ -16,7 +26,7 @@
 .map-legend {
 
   position:absolute;
-  right:54px;
+  right:50px;
   bottom:10px;
   width:135px;
   z-index: 510;
