--- a/herams/js/overview/directives/layouts/layout_1_4.html
+++ b/herams/js/overview/directives/layouts/layout_1_4.html
@@ -1,6 +1,6 @@
 <div class="layout14">
     <div class="boxes">
-       <div class="box half layout-map"><hfmap mapdata="::mapdata" ng-cloak></hfmap></div>
+       <div class="box half layout-map"><hfmap ng-cloak></hfmap></div>
        <div class="box half">
            <div class="split-4">
                <div class="table-row">
