--- a/herams/styles/overview/overview.less
+++ b/herams/styles/overview/overview.less
@@ -166,6 +166,15 @@
   border-radius: 5px;
   border: 3px solid white;
 
+  .leaflet-touch .leaflet-bar a {
+    width: 20px;
+    height: 20px;
+    line-height: 20px;
+  }
+  .leaflet-touch .leaflet-control-zoom-in, .leaflet-touch .leaflet-control-zoom-out {
+    font-size: 18px;
+  }
+
   .map-filters {
     position: absolute;
     width: 100%;
@@ -237,6 +246,9 @@
       padding: 6px 10px 10px 10px;
       height: 100%;
 
+      text-align: left;
+      line-height: 1;
+
       & > div {
         display: flex;
         align-items: center;
@@ -274,6 +286,11 @@
     text-align:center;
     font-size: 1.6em;
     font-weight: @bold;
+  }
+
+  .chart-title-total {
+    font-weight: @regular;
+    font-size: @font-size-base;
   }
 }
 
