--- a/herams/styles/home/map.less
+++ b/herams/styles/home/map.less
@@ -13,8 +13,9 @@
   margin: 0; padding:0;
   // margin-left: @home-sidebar-width;
 
-  #mapid {
+  #mapid-wkspace,#mapid {
     height: 100vh;
+    // height: 100%;
   }
 
   &.fullscreen {
