--- a/herams/styles/overview/overview.less
+++ b/herams/styles/overview/overview.less
@@ -286,6 +286,10 @@
     text-align:center;
     font-size: 1.6em;
     font-weight: @bold;
+
+    @media only screen and (max-width: 1400px) {
+      font-size: 1.2em;
+    }
   }
 
   .chart-title-total {
