--- a/herams/styles/overview/overview.less
+++ b/herams/styles/overview/overview.less
@@ -284,11 +284,13 @@
     width:100%;
     left:0;
     text-align:center;
-    font-size: 1.6em;
+    font-size: 2em;
     font-weight: @bold;
+    line-height: 1em;
 
     @media only screen and (max-width: 1400px) {
-      font-size: 1.2em;
+      font-size: 1.6em;
+      line-height: 1.2em;
     }
   }
 
@@ -316,7 +318,7 @@
   cursor: pointer;
 }
 .partners-list-grp, .partners-list-cache {
-  position: absolute;
+  position: fixed;
   top:0;
   left: 0;
   width:100%;
@@ -346,7 +348,7 @@
 
 
 .partners-list {
-  position: absolute;
+  position: fixed;
   bottom:0;
   left: 0;
 
