IE home popups icons bug fix

--- a/herams/styles/home/map.less
+++ b/herams/styles/home/map.less
@@ -216,7 +216,7 @@
     }
 
     .charts-icons {
-      position: fixed;
+      position: absolute;
       top: 157px;
       align-items: center;
     }
