--- a/herams/styles/home/home.less
+++ b/herams/styles/home/home.less
@@ -46,6 +46,8 @@
   padding: 2px;
   background-color: @dark-grey;
   width: 40px;
+
+  display: none;
 }
 
 /* user profile icons/pictures container */
