--- a/herams/styles/home/menu.less
+++ b/herams/styles/home/menu.less
@@ -76,6 +76,9 @@
 
 
   .menu-copy {
+    height: 50vh;
+    overflow: auto;
+
     &>p {
       color: @intermediate-grey;
       font-size: 0.9em;
