Implementation user infos

--- a/herams/styles/depoverrides.less
+++ b/herams/styles/depoverrides.less
@@ -49,6 +49,10 @@
 .leaflet-touch .leaflet-control-attribution {
   display: none;
 }
+.leaflet-container a.leaflet-popup-close-button {
+  top: 7px;
+  right: 7px;
+}
 
 /*
 .leaflet-right {
