--- a/herams/styles/overview/dataviz-table-style.less
+++ b/herams/styles/overview/dataviz-table-style.less
@@ -4,7 +4,6 @@
 
 .dataviz-table {
     width: 100%;
-    height: 100%;
     padding: 0;
     margin: 0;
 
@@ -45,16 +44,19 @@
 
   tr {
     // height: 25px;
-    height: 30px;
+    // height: 30px;
+    height: 28px;
     border-bottom: solid 1px @light-grey;
 
     &.no-border-bottom {
       border-bottom: none;
     }
 
+    /*
     td {
       padding-top: 6px;
     }
+    */
   }
   th {
     background-color: @light-grey;
