misc edits + start filters implementation

--- a/herams/styles/less/depoverrides.less
+++ b/herams/styles/less/depoverrides.less
@@ -59,3 +59,48 @@
   display: none;
 }
 */
+
+
+
+
+/**
+*
+*   *** BOOTSTRAP ***
+*
+*/
+.uib-datepicker-popup {
+  .h6 {
+    font-size: 0.8rem;
+  }
+}
+.uib-day {
+  .btn {
+    background-color: white;
+  }
+}
+
+.filter-dropdown {
+
+  a {
+    margin-left: 10px;
+    color: @dark-grey;
+  }
+
+
+  .open>.dropdown-menu {
+      display: block;
+  }
+
+  .dropdown-menu {
+    min-width: 7.5rem;
+    li:hover {
+      background-color: @light-grey;
+    }
+  }
+
+  .dropdown-toggle::after {
+    display:none;
+  }
+
+}
+
