--- a/herams/js/overview/directives/layouts/layout_1_3.html
+++ b/herams/js/overview/directives/layouts/layout_1_3.html
@@ -4,8 +4,14 @@
        <div class="box half">
            <div class="split-3">
                <div class="table-row">
-                   <div class="box-1"><div class="chart-container" id="chart1"></div></div>
-                   <div class="box-2"><div class="chart-container" id="chart2"></div></div>
+                   <div class="box-1 is-chart-box">
+                       <div class="tools"><img src="img/export.svg" /></div>
+                       <div class="chart-container" id="chart1"></div>
+                   </div>
+                   <div class="box-2 is-chart-box">
+                       <div class="tools"><img src="img/export.svg" /></div>
+                       <div class="chart-container" id="chart2"></div>
+                   </div>
                </div>
            </div>
            <div class="split-3">
