--- a/herams/js/overview/directives/layouts/layout_1_4.html
+++ b/herams/js/overview/directives/layouts/layout_1_4.html
@@ -4,12 +4,24 @@
        <div class="box half">
            <div class="split-4">
                <div class="table-row">
-                   <div class="box-1"><div class="chart-container" id="chart1"></div></div>
-                   <div class="box-2"><div class="chart-container" id="chart2"></div></div>
+                   <div class="box-1 is-chart-box">
+                       <div class="tools"><img src="img/export.svg" /></div>
+                       <div class="chart-container" id="chart1"></div>
+                   </div>
+                   <div class="box-2 is-chart-box">
+                       <div class="tools"><img src="img/export.svg" /></div>
+                       <div class="chart-container" id="chart2"></div>
+                   </div>
                </div>
                <div class="table-row">
-                   <div class="box-3"><div class="chart-container" id="chart3"></div></div>
-                   <div class="box-4"><div class="chart-container" id="chart4"></div></div>
+                   <div class="box-3 is-chart-box">
+                       <div class="tools"><img src="img/export.svg" /></div>
+                       <div class="chart-container" id="chart3"></div>
+                   </div>
+                   <div class="box-4 is-chart-box">
+                       <div class="tools"><img src="img/export.svg" /></div>
+                       <div class="chart-container" id="chart4"></div>
+                   </div>
                </div>
            </div>
        </div>
