Prep Release 2 - new menu left + filters misc CSS

--- a/herams/styles/less/base.less
+++ b/herams/styles/less/base.less
@@ -26,7 +26,7 @@
   height: 79px;
 }
 .content .header .row:nth-child(2) div:first-child {
-  padding: 0;
+  // padding: 0;
   margin: 0;
 }
 .content .header .breadcrumbs {
