--- a/herams/styles/less/main.less
+++ b/herams/styles/less/main.less
@@ -1,10 +1,10 @@
 
 /* Import Source Sans Pro font*/
 // @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,500,600,700');
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300');
+// @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
+// @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300');
 
-//@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700');
 
 @import "variables.less";
 @import "textstyles.less";
