--- a/herams/styles/less/variables.less
+++ b/herams/styles/less/variables.less
@@ -1,5 +1,5 @@
 /* -- BRANDING -- */
-@brand-blue: #5791e1;
+@brand-blue: #4177c1;
 @dark-grey: #42424b;
 @intermediate-grey: #878787;
 @light-grey: #e0e0e0;
