--- a/herams/styles/less/overview/overview.less
+++ b/herams/styles/less/overview/overview.less
@@ -190,21 +190,43 @@
           background-color: white;
           width:100%;
           height: 75px;
+            display:flex;
+            justify-content:space-between;
+            align-items:center;
 
-          display:flex;
-          justify-content:start;
-          align-items:center;
+          .filters-groups {
+            display:flex;
+            justify-content:space-between;
+            align-items:center;
+            width: 560px;
+            height: 75px;
 
-          &>div {
-            min-width: 140px;
-            margin-left: 20px;
+            &>div {
+              min-width: 140px;
+              margin-left: 20px;
 
-            img {
-              float:left;
-              height:20px;
-              margin-right: 8px;
+              img {
+                float:left;
+                height:20px;
+                margin-right: 8px;
+              }
+            }
+
+            .filter-value {
+              padding: 0;
+              padding-bottom: 8px;
+              border-bottom: #ccc 1px solid;
+
+              cursor: pointer;
+
+              i {
+                float:right;
+                margin-top: 5px;
+                color: @light-grey;
+              }
             }
           }
+
 
         }
       }
@@ -475,8 +497,103 @@
 }
 
 
-.filter-value {
-  padding: 0;
-  padding-bottom: 8px;
-  border-bottom: #ccc 1px solid;
+.global-filters-popovers {
+  position:absolute;
+  top:133px;
+  left:324px;
+  z-index: 10000;
+
+  .filters-popover {
+    display:none;
+
+    &:nth-child(2) {
+      position: absolute;
+      top: 0;
+      left: 402px;
+    }
+  }
+
+  .popovers-containers {
+    width:225px;
+    max-height:452px;
+    box-shadow: 0 3px 14px rgba(0, 0, 0, 0.2);
+    border-top: 1px solid @brand-blue;
+    padding-bottom: 15px;
+    background-color: white;
+
+    &:nth-child(1) {
+      border-radius: 0 0 0 8px;
+    }
+    &:nth-child(2) {
+      border-radius: 0 0 8px 0;
+    }
+
+    .popover-hdr {
+      width: 100%;
+      height: 40px;
+      font-weight: 600;
+      background-color: @light-grey;
+      padding: 8px 0 0px 15px;
+      margin-bottom: 5px;
+      font-size: 1.2em;
+
+      display:flex;
+      justify-content: space-between;
+
+      i {
+        margin-top: 3px;
+        margin-right: 15px;
+      }
+    }
+
+    ul {
+
+      margin:0;padding:0;
+
+       li {
+        padding-left: 15px;
+        height: 33px;
+        list-style: none;
+
+        display:flex;
+        justify-content: space-between;
+        align-items: center;
+
+        &:hover {
+          // color: white;
+          background-color: @light-grey;
+        }
+
+        &:active {
+          color: white;
+          background-color: #ededed;
+        }
+
+         &.selected {
+           color: white;
+           background-color: @brand-blue;
+         }
+
+         span.label {
+           width: 170px;
+           height:100%;
+           padding-top:5px;
+           cursor: pointer;
+         }
+
+         span.checkbox {
+           margin-right: 15px;
+           cursor: pointer;
+           .checked {
+             display: none;
+           }
+         }
+      }
+
+    }
+
+  }
 }
+
+
+
