--- a/herams/styles/less/overview/overview.less
+++ b/herams/styles/less/overview/overview.less
@@ -114,7 +114,7 @@
 
               img {
                 float: right;
-                width: 10px;
+                width: 11px;
               }
 
               span {
@@ -145,7 +145,7 @@
 
           img {
             float: right;
-            width: 10px;
+            width: 11px;
           }
 
         }
@@ -549,6 +549,8 @@
     ul {
 
       margin:0;padding:0;
+      height: 405px;
+      overflow-y: auto;
 
        li {
         padding-left: 15px;
