--- a/herams/styles/less/overview/overview.less
+++ b/herams/styles/less/overview/overview.less
@@ -581,6 +581,10 @@
            height:100%;
            padding-top:5px;
            cursor: pointer;
+           i {
+             font-size:0.6em;
+             padding-right:5px;
+           }
          }
 
          span.checkbox {
