--- a/herams/styles/less/overview/overview.less
+++ b/herams/styles/less/overview/overview.less
@@ -601,5 +601,49 @@
   }
 }
 
+.advanced-search-modal {
+  max-height: 500px;
+  overflow-y: auto;
+
+  ul {
+    padding-left: 5px;
+  }
+
+  ul > li {
+    list-style: none;
+    .group-title {
+      color: @brand-blue;
+      font-size: 1.3em;
+      font-weight: @medium;
+
+      img {
+        width: 11px;
+      }
+    }
+  }
+
+  .group-question-list {
+    margin-bottom: 20px;
+  }
+
+  .question-text {
+    border-bottom: 1px solid @light-grey;
+    width: 90%;
+    margin: 10px 0;
+    overflow: hidden;
+    font-weight: @medium;
+    p {
+      margin:0;padding:0;
+    }
+  }
+  .answer-text {
+    width: 80%;
+    i {
+      margin-right: 5px;
+    }
+  }
+
+}
+
 
 
