--- a/herams/styles/less/home/menu.less
+++ b/herams/styles/less/home/menu.less
@@ -58,6 +58,8 @@
         padding-left: 15px;
         border-left: 4px solid @home-sidebar-bgcolor;
 
+        cursor: pointer;
+
         &:hover {
           color: @brand-blue;
           background-color: @menu-hover-color;
