--- a/herams/styles/less/base.less
+++ b/herams/styles/less/base.less
@@ -30,8 +30,12 @@
   margin: 0;
 }
 .content .header .breadcrumbs {
+  color: #878787;
   font-size: 1.2em;
   font-weight: @light;
+  height: 17px;
+  margin-top: 11px;
+
   a {
     color: #878787;
     &:hover {
@@ -51,8 +55,10 @@
   font-size: 3em;
   font-weight: @light;
   letter-spacing: -2px;
-  // line-height: 34px;
-  margin-top: 17px;
+  line-height: 41px;
+  margin: 0;
+  padding: 0;
+  // margin-top: 17px;
   color: white;
 }
 .content .header .title span {
@@ -76,7 +82,7 @@
 .content .header .user-profile
 {
   padding-top:0;
-  margin-top:0;
+  margin-top:5px;
   line-height:1em;
 
   display:flex;
