--- a/herams/styles/less/overview/overview.less
+++ b/herams/styles/less/overview/overview.less
@@ -47,8 +47,8 @@
 
     .Logo {
       border-bottom: 1px solid @sep-color;
-      padding: 43px 0 38px 0;
-      margin-bottom: 35px;
+      padding: 7px 0 19px 0;
+      margin-bottom: 20px;
       text-align:center;
 
       img {
@@ -65,6 +65,8 @@
       padding-bottom: 30px;
       z-index:2;
 
+      max-height: 400px;
+      overflow: auto;
 
       ul {
         list-style: none;
@@ -72,6 +74,7 @@
         margin: 0;
 
         li {
+          cursor: pointer;
 
           div.item {
             display: flex;
@@ -79,7 +82,7 @@
             align-items: center;
             font-size: 1.3em;
             font-weight: @medium;
-            height: 50px;
+            height: 47px;
             padding-left: unit(@menu-padding-left, px);
 
             span {
@@ -100,7 +103,6 @@
           div.sub-categories {
 
             color: @dark-grey;
-            padding-top: 10px;
             background-color: #f3f3f3;
 
             ul > li > div:first-child {
