--- a/herams/styles/less/overview/overview.less
+++ b/herams/styles/less/overview/overview.less
@@ -651,6 +651,10 @@
       font-size: 1.3em;
       font-weight: @medium;
 
+      &.greyed-out {
+        color: @light-grey;
+      }
+
       img {
         width: 11px;
       }
