--- a/herams/styles/less/main.less
+++ b/herams/styles/less/main.less
@@ -63,3 +63,26 @@ a:focus {
 }
 
 
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #ededed;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: @intermediate-grey;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: @brand-blue;
+}
+
+
+
