--- a/herams/js/overview/directives/layouts/layout_1_3.html
+++ b/herams/js/overview/directives/layouts/layout_1_3.html
@@ -6,11 +6,11 @@
                <div class="table-row">
                    <div class="box-1 is-chart-box">
                        <div class="tools"><img src="img/export.svg" /></div>
-                       <div class="chart-container" id="chart1"></div>
+                       <div class="chart-container" id="chart1">No data available</div>
                    </div>
                    <div class="box-2 is-chart-box">
                        <div class="tools"><img src="img/export.svg" /></div>
-                       <div class="chart-container" id="chart2"></div>
+                       <div class="chart-container" id="chart2">No data available</div>
                    </div>
                </div>
            </div>
