--- a/herams/styles/less/overview/overview.less
+++ b/herams/styles/less/overview/overview.less
@@ -615,7 +615,8 @@
         }
 
         &:hover {
-          background-color: @light-grey;
+          // background-color: @light-grey;
+          background-color: #f3f3f3;
           .chevron.showing {
             opacity: 100;
           }
