--- a/herams/styles/less/depoverrides.less
+++ b/herams/styles/less/depoverrides.less
@@ -108,3 +108,24 @@
 
 }
 
+
+.glyphicon {
+  font-weight: 900;
+  font-family: Font Awesome\ 5 Free;
+
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  line-height: 1;
+
+  &.glyphicon-chevron-left:before {
+    content: "\f053";
+  }
+  &.glyphicon-chevron-right:before {
+    content: "\f054";
+  }
+}
+
