--- a/herams/styles/less/overview/overview.less
+++ b/herams/styles/less/overview/overview.less
@@ -65,7 +65,7 @@
       padding-bottom: 30px;
       z-index:2;
 
-      min-height: 400px;
+      max-height: 400px;
       overflow: auto;
 
       ul {
