--- a/herams/styles/less/overview/overview.less
+++ b/herams/styles/less/overview/overview.less
@@ -222,7 +222,7 @@
 
               &.filter-advanced, &.filter-advanced-view {
 
-                min-width: 90px;
+                min-width: 115px;
                 margin-left: 0;
 
                 button {
@@ -233,6 +233,10 @@
                     color: @brand-blue;
                   }
                 }
+              }
+
+              &.filter-advanced-view {
+                min-width: 150px;
               }
 
               &.filter-advanced {
